corrected - brandon's solution

--- a/index.html
+++ b/index.html
@@ -17,15 +17,17 @@
     <nav>nav</nav>
 
     <!-- <div class="clearfix"> -->
-
+    <div class="mid-wrap">
       <section>section
         <article> article
-            <h1 class="headline">h1, h2, h3<h1>
+            <h1 class="headline">h1, h2, h3</h1>
             <p class="paragraph">p</p>
         </article>
       </section>
 
       <aside>aside</aside>
+    </div>
+    
 
     <!-- </div> -->
     
